# fastapi-worker

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
